<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="content_description_tvshow_poster">TvShow Poster</string>
    <string name="content_description_detail_poster">TvShow Poster</string>
    <string name="user_score">User score</string>
    <string name="age_rating">Age rating</string>
    <string name="duration">Duration</string>
    <string name="overview">Overview</string>
    <string name="dummy_long_text">
            Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.
    </string>
    <string name="release_date">Release date</string>
    <string name="status">Status</string>
    <string name="original_language">Original language</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="type">Type</string>
    <string name="network">Network</string>
    <string-array name="movie_title">
        <item>A Star Is Born </item>
        <item>Alita: Battle Angel </item>
        <item>Aquaman </item>
        <item>Bohemian Rhapsody </item>
        <item>Cold Pursuit </item>
        <item>Creed II </item>
        <item>Fantastic Beasts: The Crimes of Grindelwald </item>
        <item>Glass </item>
        <item>How to Train Your Dragon: The Hidden World </item>
        <item>Avengers: Infinity War </item>
    </string-array>
    <string-array name="movie_year">
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2018)</item>
        <item>(2018)</item>
        <item>(2019)</item>
        <item>(2019)</item>
        <item>(2018)</item>
    </string-array>
    <string-array name="movie_age_rating">
        <item>R</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>R</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>PG</item>
        <item>PG-13</item>
    </string-array>
    <string-array name="movie_release_date">
        <item>10/05/2018 (US)</item>
        <item>02/14/2019 (US)</item>
        <item>12/21/2018 (US)</item>
        <item>11/02/2018 (US)</item>
        <item>02/08/2019 (US)</item>
        <item>11/21/2018 (US)</item>
        <item>11/16/2018 (US)</item>
        <item>01/18/2019 (US)</item>
        <item>02/22/2019 (US)</item>
        <item>04/27/2018 (US)</item>
    </string-array>
    <string-array name="movie_tag">
        <item>Drama, Romance, Music</item>
        <item>Action, Science Fiction, Adventure</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Drama, Music</item>
        <item>Action, Crime, Thriller</item>
        <item>Drama</item>
        <item>Adventure, Fantasy, Family</item>
        <item>Thriller, Drama, Science Fiction</item>
        <item>Animation, Family, Adventure</item>
        <item>Adventure, Action, Science Fiction</item>
    </string-array>
    <string-array name="movie_duration">
        <item>2h 16m</item>
        <item>2h 2m</item>
        <item>2h 24m</item>
        <item>2h 15m</item>
        <item>1h 59m</item>
        <item>2h 10m</item>
        <item>2h 14m</item>
        <item>2h 9m</item>
        <item>1h 44m</item>
        <item>2h 29m</item>
    </string-array>
    <string-array name="movie_user_score">
        <item>75%</item>
        <item>70%</item>
        <item>69%</item>
        <item>80%</item>
        <item>56%</item>
        <item>69%</item>
        <item>69%</item>
        <item>66%</item>
        <item>78%</item>
        <item>83%</item>
    </string-array>
    <string-array name="movie_overview">
        <item>
            Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.
        </item>
        <item>
            When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.
        </item>
        <item>
            Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.
        </item>
        <item>
            Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.
        </item>
        <item>
            The quiet family life of Nels Coxman, a snowplow driver, is upended after his son\'s murder. Nels begins a vengeful hunt for Viking, the drug lord he holds responsible for the killing, eliminating Viking\'s associates one by one. As Nels draws closer to Viking, his actions bring even more unexpected and violent consequences, as he proves that revenge is all in the execution.
        </item>
        <item>
            Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.
        </item>
        <item>
            Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.
        </item>
        <item>
            In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.
        </item>
        <item>
            As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.
        </item>
        <item>
            As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.
        </item>
    </string-array>
    <string-array name="movie_status">
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
    </string-array>
    <string-array name="movie_original_language">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="movie_budget">
        <item>$36,000,000.00</item>
        <item>$170,000,000.00</item>
        <item>$160,000,000.00</item>
        <item>$52,000,000.00</item>
        <item>$60,000,000.00</item>
        <item>$50,000,000.00</item>
        <item>$200,000,000.00</item>
        <item>$20,000,000.00</item>
        <item>$129,000,000.00</item>
        <item>$300,000,000.00</item>
    </string-array>
    <string-array name="movie_revenue">
        <item>$433,888,866.00</item>
        <item>$404,852,543.00</item>
        <item>$1,148,461,807.00</item>
        <item>$894,027,543.00</item>
        <item>$59,213,931.00</item>
        <item>$214,215,889.00</item>
        <item>$653,355,901.00</item>
        <item>$246,941,965.00</item>
        <item>$517,526,875.00</item>
        <item>$2,046,239,637.00</item>
    </string-array>
    <string-array name="tvshow_title">
        <item>Arrow </item>
        <item>Doom Patrol </item>
        <item>Dragon Ball </item>
        <item>Fairy Tail </item>
        <item>Family Guy </item>
        <item>The Flash </item>
        <item>Game of Thrones </item>
        <item>Gotham </item>
        <item>Grey\'s Anatomy </item>
        <item>Hanna </item>
    </string-array>
    <string-array name="tvshow_year">
        <item>(2012)</item>
        <item>(2019)</item>
        <item>(1986)</item>
        <item>(2009)</item>
        <item>(1999)</item>
        <item>(2014)</item>
        <item>(2011)</item>
        <item>(2014)</item>
        <item>(2005)</item>
        <item>(2019)</item>
    </string-array>
    <string-array name="tvshow_age_rating">
        <item>TV-14</item>
        <item>TV-MA</item>
        <item>PG</item>
        <item>TV-14</item>
        <item>TV-14</item>
        <item>TV-PG</item>
        <item>TV-MA</item>
        <item>TV-14</item>
        <item>TV-14</item>
        <item>TV-MA</item>
    </string-array>
    <string-array name="tvshow_tag">
        <item>Crime, Drama, Mystery, Action &amp; Adventure</item>
        <item>Sci-Fi &amp; Fantasy, Action &amp; Adventure</item>
        <item>Comedy, Sci-Fi &amp; Fantasy, Animation, Action &amp; Adventure</item>
        <item>Action &amp; Adventure, Animation, Comedy, Sci-Fi &amp; Fantasy</item>
        <item>Animation, Comedy</item>
        <item>Drama, Sci-Fi &amp; Fantasy</item>
        <item>Sci-Fi &amp; Fantasy, Drama</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Drama</item>
        <item>Action &amp; Adventure, Drama</item>
    </string-array>
    <string-array name="tvshow_duration">
        <item>42m</item>
        <item>49m</item>
        <item>25m</item>
        <item>25m</item>
        <item>22m</item>
        <item>44m</item>
        <item>1h</item>
        <item>43m</item>
        <item>43m</item>
        <item>50m</item>
    </string-array>
    <string-array name="tvshow_user_score">
        <item>63%</item>
        <item>73%</item>
        <item>78%</item>
        <item>68%</item>
        <item>67%</item>
        <item>74%</item>
        <item>83%</item>
        <item>72%</item>
        <item>78%</item>
        <item>75%</item>
    </string-array>
</resources>